# shepherd

./: .dir-locals.el  .gitignore  ANNOUNCE--0.5  ANNOUNCE--0.6  ANNOUNCE--0.7  AUTHORS  ChangeLog  ChangeLog-2003  Makefile.am  Makefile.in  NEWS  QUESTIONS  README  THANKS  args.scm  comm.scm  config.scm.in  configure  configure.ac  configure.in  deco.in  deco.scm  dmd.in  dmd.info  dmd.scm  dmd.texi  halt.in  herd.in  reboot.in  runlevel.scm  self.scm  service.scm  shepherd.in  shepherd.texi  stamp-vti  support.scm  version.texi
doc/: shepherd.texi
doc/examples/: _unknown.scm  wolfgangj.scm
etc/: crash-handler.c
examples/: Makefile.am  Makefile.in  README  _unknown.scm  wolfgangj.scm
modules/: deco.scm  dmd.scm  halt.scm  herd.scm  reboot.scm  shepherd.scm
modules/dmd/: args.scm  comm.scm  config.scm  config.scm.in  runlevel.scm  service.scm  support.scm  system.scm.in
modules/shepherd/: args.scm  comm.scm  config.scm.in  runlevel.scm  service.scm  support.scm  system.scm.in
modules/shepherd/scripts/: halt.scm  herd.scm  reboot.scm
po/: LINGUAS  Makevars  POTFILES.in  da.po  de.po  es.po  fr.po  pt_BR.po  sk.po  sv.po  ta.po  uk.po  zh_CN.po
tests/: basic.sh  file-creation-mask.sh  forking-service.sh  misbehaved-client.sh  no-home.sh  one-shot.sh  pid-file.sh  replacement.sh  respawn-throttling.sh  respawn.sh  restart.sh  sigint.sh  signals.sh  status-sexp.sh
utils/: Makefile.am  Makefile.in  dmd-gettext.scm  sysvconfig.scm
