dnl Process this file with autoconf to procude a configure script.

dnl Initialization
AC_INIT(dmd.scm)
AM_INIT_AUTOMAKE(dmd,-0.6)

dnl Checks for programs.
GUILE_PROGS

AC_MSG_CHECKING(whether it is at least guile 1.5.x)
GUILE_CHECK(version_ok,
(or (>= (string->number (major-version)) 2)
    (and (>= (string->number (major-version)) 1)
         (>= (string->number (minor-version)) 5))
    (quit 1))
)
if test $version_ok = 0; then
  recent_version=yes
else
  recent_version=no
fi
AC_MSG_RESULT($recent_version)
if test $recent_version = no; then
  AC_MSG_WARN(your guile is probably too old to run dmd)
fi

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for library functions

dnl Finish.
AC_OUTPUT(Makefile examples/Makefile utils/Makefile)
