dnl Process this file with autoconf to procude a configure script.

dnl Initialization
AC_INIT([modules/dmd.scm])
AM_INIT_AUTOMAKE(dmd,-0.4)

AC_PROG_MKDIR_P

dnl Checks for programs.
GUILE_PROGS

AC_MSG_CHECKING([whether it is Guile 2.0])
GUILE_CHECK(version_ok,
(or (and (>= (string->number (major-version)) 2)
         (>= (string->number (major-version)) 0))
    (quit 1))
)
if test $version_ok = 0; then
  recent_version=yes
else
  recent_version=no
fi
AC_MSG_RESULT($recent_version)
if test $recent_version = no; then
  AC_MSG_WARN(your guile is probably too old to run dmd)
fi

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for library functions

dnl Finish.
AC_OUTPUT(Makefile examples/Makefile utils/Makefile)
